--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" type="text/css" href="css/reboot.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,7 +12,10 @@
   <title>Разработка лендингов</title>
 </head>
 <body>
-  <h1>Разработка лендингов</h1>
+    <div class="container">
+        <h1>Разработка лендингов</h1>
+    </div>
+  
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/script.js"></script>
 </body>
