--- a/index.html
+++ b/index.html
@@ -3,18 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
+  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
   <link rel="stylesheet" type="text/css" href="css/reboot.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
-  <title>Разработка лендингов</title>
+  <title>Разработка Landing page</title>
 </head>
+
 <body>
+  <section class="header-section" style="background: url(img/bg-geader.jpg);background-size: cover;">
     <div class="container">
-        <h1>Разработка лендингов</h1>
+        <div class="header row">
+          <div class="logo col-md-3">logo</div>
+          <div class="menu col-md-6">
+              <div class="menu">
+                  <a href="#">Цены</a>
+                  <a href="#">Примеры</a>
+                  <a href="#">Контакты</a>
+                </div>
+          </div>
+          <div class="contacts col-md-3">phone</div>
+        </div>
+        <div class="row flex-center">
+          <h1>Разработка Landing page</h1>
+        </div>
+          <div class="row priveleges">
+            <div class="col-md-6 text-center">Без предоплаты</div>
+            <div class="col-md-6 text-center">Создание рекламной компании</div>
+          </div>
+          <div class="row priveleges">
+            <div class="col-md-6 text-center">Бесплатные консультации</div>
+            <div class="col-md-6 text-center">Средний срок разработки 10 дней</div>
+          </div>
+        <div class="row flex-center" style="margin: 6rem;">
+          <a href="#" class="btn"/>Заказать</a>
+        </div>
     </div>
+  </section>
+
+  <section>
+    
+  </section>
+
+
+
+
+    
   
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/script.js"></script>
