add section tmpl
добавил шаблонные секции

--- a/index.html
+++ b/index.html
@@ -44,8 +44,20 @@
   </section>
 
   <section>
-    
+    <div class="container">
+        <div class="row">
+		<h2>Наши преимущества</h2>
+	</div>
+    </div>
   </section>
+	
+  <section>
+    <div class="container">
+        <div class="row">
+		<h2>Наши преимущества</h2>
+	</div>
+    </div>
+  </section>	
 
 
 
