--- a/index.html
+++ b/index.html
@@ -46,24 +46,142 @@
   <section>
     <div class="container">
         <div class="row">
-		<h2>Наши преимущества</h2>
-	</div>
+			<h2>Что вы получите</h2>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p><strong>Преимущество1</strong><br>Описение если есть</p>
+				<p><strong>Преимущество2</strong><br>Описение если есть</p>
+				<p><strong>Преимущество3</strong><br>Описение если есть</p>
+				<p><strong>Преимущество4</strong><br>Описение если есть</p>
+			</div>
+			<div class="col-md-6">
+				КАРТИНКА
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				КАРТИНКА
+			</div>
+			<div class="col-md-6">
+				<p><strong>Преимущество1</strong><br>Описение если есть</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p><strong>Преимущество1</strong><br>Описение если есть</p>
+			</div>
+			<div class="col-md-6">
+				КАРТИНКА
+			</div>
+		</div>
     </div>
   </section>
 	
   <section>
     <div class="container">
         <div class="row">
-		<h2>Наши преимущества</h2>
-	</div>
+			<h2>Цены</h2>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="price-item">
+					<div class="price-item__header">
+						Пакет1
+					</div>
+					<div class="price-item__body">
+						<p>9 990 руб.</p>
+						<p>дизайн</p>
+						<p>адаптивная верстка</p>
+					</div>
+					<div class="price-item__footer">
+						<a href="#">Заказать!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="price-item">
+					<div class="price-item__header">
+						Пакет1
+					</div>
+					<div class="price-item__body">
+						<p>9 990 руб.</p>
+						<p>дизайн</p>
+						<p>адаптивная верстка</p>
+					</div>
+					<div class="price-item__footer">
+						<a href="#">Заказать!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="price-item">
+					<div class="price-item__header">
+						Пакет1
+					</div>
+					<div class="price-item__body">
+						<p>9 990 руб.</p>
+						<p>дизайн</p>
+						<p>адаптивная верстка</p>
+					</div>
+					<div class="price-item__footer">
+						<a href="#">Заказать!</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="price-item">
+					<div class="price-item__header">
+						Пакет1
+					</div>
+					<div class="price-item__body">
+						<p>9 990 руб.</p>
+						<p>дизайн</p>
+						<p>адаптивная верстка</p>
+					</div>
+					<div class="price-item__footer">
+						<a href="#">Заказать!</a>
+					</div>
+				</div>
+			</div>
+		</div>
     </div>
-  </section>	
-
-
-
-
-    
+  </section>
   
+  <section>
+    <div class="container">
+        <div class="row">
+			<h2>Наши работы</h2>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				картинка1
+			</div>
+			<div class="col-xs-12 col-md-4">
+				картинка2
+			</div>
+			<div class="col-xs-12 col-md-4">
+				картинка3
+			</div>
+		</div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+        <div class="row">
+			<h2>Контакты</h2>
+		</div>
+		<div class="col-xs-12 col-sm-4">
+			<p><strong>Телефон:</strong><br>+7(987)1234567</p>
+			<p><strong>E-mail:</strong><br>email@mail.ru</p>
+		</div>
+		<div class="col-xs-12 col-sm-8">
+			картинка3
+		</div>
+    </div>
+  </section>
+
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/script.js"></script>
 </body>
