--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <section>
     <div class="container">
-        <div class="row">
+        <div class="row text-header">
 			<h2>Что вы получите</h2>
 		</div>
 		<div class="row">
@@ -56,7 +56,7 @@
 				<p><strong>Преимущество4</strong><br>Описение если есть</p>
 			</div>
 			<div class="col-md-6">
-				КАРТИНКА
+				<img src="img/prototype.png" alt="Прототип и дизайн">
 			</div>
 		</div>
 		<div class="row">
@@ -80,7 +80,7 @@
 	
   <section>
     <div class="container">
-        <div class="row">
+        <div class="row text-header">
 			<h2>Цены</h2>
 		</div>
 		<div class="row">
@@ -150,7 +150,7 @@
   
   <section>
     <div class="container">
-        <div class="row">
+        <div class="row text-header">
 			<h2>Наши работы</h2>
 		</div>
 		<div class="row">
@@ -169,7 +169,7 @@
 
   <section>
     <div class="container">
-        <div class="row">
+        <div class="row text-header">
 			<h2>Контакты</h2>
 		</div>
 		<div class="col-xs-12 col-sm-4">
