--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col-md-6 text-center">Бесплатные консультации</div>
             <div class="col-md-6 text-center">Средний срок разработки 10 дней</div>
           </div>
-        <div class="row flex-center" style="margin: 6rem;">
+        <div class="row flex-center" style="margin: 2rem 0 3rem;">
           <a href="#" class="btn"/>Заказать</a>
         </div>
     </div>
@@ -48,12 +48,13 @@
         <div class="row text-header">
 			<h2>Что вы получите</h2>
 		</div>
-		<div class="row">
+		<div class="row what-you-get">
 			<div class="col-md-6">
-				<p><strong>Преимущество1</strong><br>Описение если есть</p>
-				<p><strong>Преимущество2</strong><br>Описение если есть</p>
-				<p><strong>Преимущество3</strong><br>Описение если есть</p>
-				<p><strong>Преимущество4</strong><br>Описение если есть</p>
+				<p><strong>Прототип</strong><br>Уже на первом этапе разработки Вы увидите схему Вашего лендинга.</p>
+				<p><strong>Уникальный дизайн</strong><br>Мы не любим шаблоны. Дизайнеры работают от души.</p>
+				<p><strong>Домен и хостинг</strong><br>Зарегистрируем домен на ваше имя. Разместим и запустим сайт на хостинге.</p>
+				<p><strong>Настройка Яндекс метрики</strong><br>Вы сможете видеть детальную статистику посещения Вашего сайта.</p>
+				
 			</div>
 			<div class="col-md-6">
 				<img src="img/prototype.png" alt="Прототип и дизайн">
