--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </div>
   </section>
 
-  <section>
+  <section class="wedo">
     <div class="container">
         <div class="row text-header">
-			<h2>Что вы получите</h2>
+			<h2>Что мы делаем</h2>
 		</div>
 		<div class="row what-you-get">
 			<div class="col-md-6">
@@ -54,7 +54,6 @@
 				<p><strong>Уникальный дизайн</strong><br>Мы не любим шаблоны. Дизайнеры работают от души.</p>
 				<p><strong>Домен и хостинг</strong><br>Зарегистрируем домен на ваше имя. Разместим и запустим сайт на хостинге.</p>
 				<p><strong>Настройка Яндекс метрики</strong><br>Вы сможете видеть детальную статистику посещения Вашего сайта.</p>
-				
 			</div>
 			<div class="col-md-6">
 				<img src="img/prototype.png" alt="Прототип и дизайн">
@@ -62,24 +61,44 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				КАРТИНКА
+				<img src="img/adaptive.png" alt="Адаптивный дизайн">
 			</div>
 			<div class="col-md-6">
-				<p><strong>Преимущество1</strong><br>Описение если есть</p>
+				<p><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<p><strong>Преимущество1</strong><br>Описение если есть</p>
+				<p><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
 			</div>
 			<div class="col-md-6">
-				КАРТИНКА
+				<img src="img/admpanel.png" alt="Адаптивный дизайн">
 			</div>
 		</div>
     </div>
   </section>
 	
+  
   <section>
+    <div class="container">
+        <div class="row text-header">
+			<h2>Наши работы</h2>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				картинка1
+			</div>
+			<div class="col-xs-12 col-md-4">
+				картинка2
+			</div>
+			<div class="col-xs-12 col-md-4">
+				картинка3
+			</div>
+		</div>
+    </div>
+  </section>
+
+  <section class="price">
     <div class="container">
         <div class="row text-header">
 			<h2>Цены</h2>
@@ -147,27 +166,8 @@
 			</div>
 		</div>
     </div>
-  </section>
-  
-  <section>
-    <div class="container">
-        <div class="row text-header">
-			<h2>Наши работы</h2>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 col-md-4">
-				картинка1
-			</div>
-			<div class="col-xs-12 col-md-4">
-				картинка2
-			</div>
-			<div class="col-xs-12 col-md-4">
-				картинка3
-			</div>
-		</div>
-    </div>
-  </section>
-
+	</section>
+	
   <section>
     <div class="container">
         <div class="row text-header">
