--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <div class="row text-header">
 			<h2>Что мы делаем</h2>
 		</div>
-		<div class="row what-you-get">
-			<div class="col-md-6">
+		<div class="row">
+			<div class="col-md-6 text-space-around">
 				<p><strong>Прототип</strong><br>Уже на первом этапе разработки Вы увидите схему Вашего лендинга.</p>
 				<p><strong>Уникальный дизайн</strong><br>Мы не любим шаблоны. Дизайнеры работают от души.</p>
 				<p><strong>Домен и хостинг</strong><br>Зарегистрируем домен на ваше имя. Разместим и запустим сайт на хостинге.</p>
 				<p><strong>Настройка Яндекс метрики</strong><br>Вы сможете видеть детальную статистику посещения Вашего сайта.</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 text-center">
 				<img src="img/prototype.png" alt="Прототип и дизайн">
 			</div>
 		</div>
@@ -63,15 +63,15 @@
 			<div class="col-md-6">
 				<img src="img/adaptive.png" alt="Адаптивный дизайн">
 			</div>
-			<div class="col-md-6">
-				<p><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
+			<div class="col-md-6 text-space-around">
+				<p style="margin: auto 0;"><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
-				<p><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
+			<div class="col-md-6 text-space-around">
+				<p style="margin: auto 0;"><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 text-center">
 				<img src="img/admpanel.png" alt="Адаптивный дизайн">
 			</div>
 		</div>
