--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 			<h2>Наши работы</h2>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-4">
-				картинка1
+			<div class="col-xs-12 col-md-4 example" style="text-align: right; padding-top: 5rem;">
+					<img src="img/ex-1.jpg" alt="">
 			</div>
-			<div class="col-xs-12 col-md-4">
-				картинка2
+			<div class="col-xs-12 col-md-4 example" style="text-align: center;">
+					<img src="img/ex-2.jpg" alt="">
 			</div>
-			<div class="col-xs-12 col-md-4">
-				картинка3
+			<div class="col-xs-12 col-md-4 example" style="text-align: left; padding-top: 5rem;">
+					<img src="img/ex-3.jpg" alt="">
 			</div>
 		</div>
     </div>
