--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
           <h1>Разработка Landing page</h1>
         </div>
           <div class="row priveleges">
-            <div class="col-md-6 text-center">Без предоплаты</div>
-            <div class="col-md-6 text-center">Создание рекламной компании</div>
+            <div class="col-md-6 text-center">Без предоплаты<br>
+							<div class="div-line"> </div>
+						</div>
+						<div class="col-md-6 text-center">Создание рекламной компании<br>
+							<div class="div-line"> </div>
+						</div>
           </div>
           <div class="row priveleges">
-            <div class="col-md-6 text-center">Бесплатные консультации</div>
-            <div class="col-md-6 text-center">Средний срок разработки 10 дней</div>
+            <div class="col-md-6 text-center">Бесплатные консультации<br>
+							<div class="div-line"></div>
+						</div>
+            <div class="col-md-6 text-center">Средний срок разработки 10 дней<br>
+							<div class="div-line"></div>
+						</div>
           </div>
         <div class="row flex-center" style="margin: 4rem 0 3rem;">
           <a href="#" class="btn"/>Заказать</a>
@@ -64,12 +72,12 @@
 				<img src="img/adaptive.png" alt="Адаптивный дизайн">
 			</div>
 			<div class="col-md-6 text-space-around">
-				<p style="margin: auto 0;"><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
+				<p><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 text-space-around">
-				<p style="margin: auto 0;"><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
+				<p><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
 			</div>
 			<div class="col-md-6 text-center">
 				<img src="img/admpanel.png" alt="Адаптивный дизайн">
@@ -85,13 +93,13 @@
 			<h2>Наши работы</h2>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-4 example" style="text-align: right; padding-top: 5rem;">
+			<div class="col-xs-12 col-md-4 example ex__right">
 					<img src="img/ex-1.jpg" alt="">
 			</div>
-			<div class="col-xs-12 col-md-4 example" style="text-align: center;">
+			<div class="col-xs-12 col-md-4 example ex__center">
 					<img src="img/ex-2.jpg" alt="">
 			</div>
-			<div class="col-xs-12 col-md-4 example" style="text-align: left; padding-top: 5rem;">
+			<div class="col-xs-12 col-md-4 example ex__left">
 					<img src="img/ex-3.jpg" alt="">
 			</div>
 		</div>
