add price style
стили для ценовых плашек

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
   </section>
 
-  <section class="price">
+  <section class="price-section">
     <div class="container">
         <div class="row text-header">
 			<h2>Цены</h2>
@@ -118,61 +118,60 @@
 						Пакет1
 					</div>
 					<div class="price-item__body">
-						<p>9 990 руб.</p>
 						<p>дизайн</p>
 						<p>адаптивная верстка</p>
 					</div>
 					<div class="price-item__footer">
-						<a href="#">Заказать!</a>
+						9 990 руб.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет1
+						Пакет 2
 					</div>
 					<div class="price-item__body">
-						<p>9 990 руб.</p>
 						<p>дизайн</p>
 						<p>адаптивная верстка</p>
 					</div>
 					<div class="price-item__footer">
-						<a href="#">Заказать!</a>
+					  19 990 руб.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет1
+						Пакет 3
 					</div>
 					<div class="price-item__body">
-						<p>9 990 руб.</p>
 						<p>дизайн</p>
 						<p>адаптивная верстка</p>
 					</div>
 					<div class="price-item__footer">
-						<a href="#">Заказать!</a>
+						29 990 руб.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет1
+						Пакет4
 					</div>
 					<div class="price-item__body">
-						<p>9 990 руб.</p>
 						<p>дизайн</p>
 						<p>адаптивная верстка</p>
 					</div>
 					<div class="price-item__footer">
-						<a href="#">Заказать!</a>
+						39 990 руб.
 					</div>
 				</div>
 			</div>
 		</div>
+		<div class="row flex-center" style="margin: 2rem 0 3rem;">
+          <a href="#" class="btn"/>Заказать</a>
+    </div>
     </div>
 	</section>
 	
