--- a/index.html
+++ b/index.html
@@ -115,11 +115,20 @@
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет1
+						Стартовый
 					</div>
 					<div class="price-item__body">
-						<p>дизайн</p>
-						<p>адаптивная верстка</p>
+						<p class="active">бесплатный прототип</p>
+						<p class="active">дизайн</p>
+						<p class="active">адаптивная верстка</p>
+						<p class="active">программирование</p>
+						<p class="active">второй лендинг -40%</p>
+						<p class="noactive">написание текста</p>
+						<p class="noactive">регистрация и подключение домена</p>
+						<p class="noactive">хостинг на год</p>
+						<p class="noactive">настройка Яндекс метрики</p>
+						<p class="noactive">создание рекламной компании в Яндекс</p>
+						<p class="noactive">сопровождение 1 месяц</p>
 					</div>
 					<div class="price-item__footer">
 						9 990 руб.
@@ -129,42 +138,69 @@
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет 2
+						Стандарт
 					</div>
 					<div class="price-item__body">
-						<p>дизайн</p>
-						<p>адаптивная верстка</p>
+						<p class="active">бесплатный прототип</p>
+						<p class="active">дизайн</p>
+						<p class="active">адаптивная верстка</p>
+						<p class="active">программирование</p>
+						<p class="active">второй лендинг -40%</p>
+						<p class="active">написание текста</p>
+						<p class="active">регистрация и подключение домена</p>
+						<p class="active">хостинг на месяц</p>
+						<p class="noactive">настройка Яндекс метрики</p>
+						<p class="noactive">создание рекламной компании в Яндекс</p>
+						<p class="noactive">сопровождение 1 месяц</p>
 					</div>
 					<div class="price-item__footer">
-					  19 990 руб.
+					  14 990 руб.
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="price-item">
 					<div class="price-item__header">
-						Пакет 3
+						Стандарт +
 					</div>
 					<div class="price-item__body">
-						<p>дизайн</p>
-						<p>адаптивная верстка</p>
+						<p class="active">бесплатный прототип</p>
+						<p class="active">дизайн</p>
+						<p class="active">адаптивная верстка</p>
+						<p class="active">программирование</p>
+						<p class="active">второй лендинг -40%</p>
+						<p class="active">написание текста</p>
+						<p class="active">регистрация и подключение домена</p>
+						<p class="active">хостинг на 6 месяцев</p>
+						<p class="active">настройка Яндекс метрики</p>
+						<p class="noactive">создание рекламной компании в Яндекс</p>
+						<p class="noactive">сопровождение 1 месяц</p>
+					</div>
+					<div class="price-item__footer">
+						19 990 руб.
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="price-item">
+					<div class="price-item__header">
+						Бизнес
+					</div>
+					<div class="price-item__body">
+						<p class="active">бесплатный прототип</p>
+						<p class="active">дизайн</p>
+						<p class="active">адаптивная верстка</p>
+						<p class="active">программирование</p>
+						<p class="active">второй лендинг -40%</p>
+						<p class="active">написание текста</p>
+						<p class="active">регистрация и подключение домена</p>
+						<p class="active">хостинг на год</p>
+						<p class="active">настройка Яндекс метрики</p>
+						<p class="active">создание рекламной компании в Яндекс</p>
+						<p class="active">сопровождение 1 месяц</p>
 					</div>
 					<div class="price-item__footer">
 						29 990 руб.
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item">
-					<div class="price-item__header">
-						Пакет4
-					</div>
-					<div class="price-item__body">
-						<p>дизайн</p>
-						<p>адаптивная верстка</p>
-					</div>
-					<div class="price-item__footer">
-						39 990 руб.
 					</div>
 				</div>
 			</div>
