--- a/soglasie.html
+++ b/soglasie.html
@@ -15,10 +15,11 @@
 <body>
 <!--=== main ===-->
 	
-	<main class="main">
+	<main class="main" style="display: flex;
+    justify-content: center;">
 		
 	<!-- main-content -->
-		<div class="main_content">
+		<div class="main_content" style="width: 80%;">
 			<br><h1>Согласие на обработку персональных данных</h1>
 			<p>Настоящим я, далее – «Субъект Персональных Данных», во исполнение требований Федерального закона от 27.07.2006 г. №152 - ФЗ «О персональных данных» (с изменениями и дополнениями) свободно, своей волей и в своем интересе даю свое согласие Студии "Феникс" (далее - "феникс") на обработку своих персональных данных, указанных при заполнении веб-форм на сайте http://qfenix.ru и его поддоменов, направляемой (заполненной) с использованием Сайта.
 <br><br>
