--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 	<section class="menu-section">
 		<div class="container">
         <div class="row header">
-					<div class="col logo">
+					<div class="col-12 col-sm logo">
 						<div><a href="#">logo</a></div>
 					</div>
-					<div class="col">
+					<div class="col-12 col-sm">
 						<div class="menu">
 							<a href="#portfolio">Примеры</a>
               <a href="#prices">Цены</a>
               <a href="#contacts">Контакты</a>
 						</div>
 					</div>
-					<div class="col contacts">
+					<div class="col-12 col-sm contacts">
 						qfenix@yandex.ru
 					</div>
           <!--<div class="logo col-md-3">logo</div>
