--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<a href="#ex1" class="popup"><img src="img/ex1-min.jpg" alt=""></a>
 			</div>
 			<div class="col-xs-12 col-md-4 example ex__center">
-				<a href="#ex2" class="popup"><img src="img/ex2.jpg" alt=""></a>
+				<a href="#ex2" class="popup"><img src="img/ex2-min.jpg" alt=""></a>
 			</div>
 			<div class="col-xs-12 col-md-4 example ex__left">
 				<a href="#ex3" class="popup"><img src="img/ex3-min.jpg" alt=""></a>
