--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<section class="menu-section">
 		<div class="container">
         <div class="row header">
-					<div class="col-12 col-md-3">
-						<div class="logo"><a href="#"><img src="img/logo1.png" alt="" style="padding: 0;max-width: 100%;"></a></div>
+					<div class="col-12 col-md-3 logo">
+						<div><a href="#"><img src="img/logo1.png" alt="" style="padding: 0;max-width: 100%;"></a></div>
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="menu">
@@ -35,7 +35,7 @@
         </div>
 		</div>
 	</section>
-  <section class="header-section" style="background: url(img/bg-geader.jpg);background-size: cover;">
+  <section class="header-section" style="background: url(img/bg-header.jpg);background-size: cover;">
     <div class="container">
         <div class="row flex-center">
           <h1>Разработка Landing page</h1>
