--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
+	<script src="vendor/wow.min.js"></script>
+	<script>
+			new WOW().init();
+	</script>
   <link rel="stylesheet" type="text/css" href="css/reboot.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
-  <link rel="stylesheet" type="text/css" href="magnific-popup/magnific-popup.css">
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap-grid.min.css">
+  <link rel="stylesheet" type="text/css" href="vendor/magnific-popup/magnific-popup.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="vendor/animate.min.css">
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <title>Разработка Landing page</title>
 </head>
@@ -29,14 +34,13 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-3 contacts">
-							<!--  -->
 						qfenix@yandex.ru
 					</div>
         </div>
 		</div>
 	</section>
-  <section class="header-section" style="background: url(img/bg-header.jpg);background-size: cover;">
-    <div class="container">
+	<section class="header-section" style="background: url(img/bg-header.jpg);background-size: cover;">
+		<div class="container">
         <div class="row flex-center">
           <h1>Разработка Landing page</h1>
         </div>
@@ -63,34 +67,36 @@
   </section>
 
   <section class="wedo">
+			<!-- style="background: url(img/wedo-fone.png);background-size: cover;" -->
+    <div class="wedo-fone" style="background: url(img/wedo-fone.png); background-size: cover; background-repeat: no-repeat;"></div>
     <div class="container">
         <div class="row text-header">
 			<h2>Что мы делаем</h2>
 		</div>
 		<div class="row">
 			<div class="col-md-6 text-space-around">
-				<p><strong>Прототип</strong><br>Уже на первом этапе разработки Вы увидите схему Вашего лендинга.</p>
-				<p><strong>Уникальный дизайн</strong><br>Мы не любим шаблоны. Дизайнеры работают от души.</p>
-				<p><strong>Домен и хостинг</strong><br>Зарегистрируем домен на ваше имя. Разместим и запустим сайт на хостинге.</p>
-				<p><strong>Настройка Яндекс метрики</strong><br>Вы сможете видеть детальную статистику посещения Вашего сайта.</p>
+				<p class="wow fadeInUp" data-wow-offset=50><strong>Прототип</strong><br>Уже на первом этапе разработки Вы увидите схему Вашего лендинга.</p>
+				<p class="wow fadeInUp" data-wow-offset=50><strong>Уникальный дизайн</strong><br>Мы не любим шаблоны. Дизайнеры работают от души.</p>
+				<p class="wow fadeInUp" data-wow-offset=50><strong>Домен и хостинг</strong><br>Зарегистрируем домен на ваше имя. Разместим и запустим сайт на хостинге.</p>
+				<p class="wow fadeInUp" data-wow-offset=50><strong>Настройка Яндекс метрики</strong><br>Вы сможете видеть детальную статистику посещения Вашего сайта.</p>
 			</div>
-			<div class="col-md-6 text-center">
+			<div class="col-md-6 text-center wow fadeIn" data-wow-offset=200>
 				<img src="img/prototype.png" alt="Прототип и дизайн">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-6 wow fadeIn " data-wow-offset=200>
 				<img src="img/adaptive.png" alt="Адаптивный дизайн">
 			</div>
-			<div class="col-md-6 text-space-around">
+			<div class="col-md-6 text-space-around wow fadeIn " data-wow-delay=0.5s data-wow-offset=200>
 				<p><strong>Адаптивная верстка</strong><br>Ваш лендинг будет подстраиваться под экраны компьютеров, планшетов и телефонов.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 text-space-around">
+			<div class="col-md-6 text-space-around wow fadeIn " data-wow-offset=200>
 				<p><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
 			</div>
-			<div class="col-md-6 text-center">
+			<div class="col-md-6 text-center wow fadeIn " data-wow-delay=0.5s data-wow-offset=200>
 				<img src="img/admpanel.png" alt="Адаптивный дизайн">
 			</div>
 		</div>
@@ -117,15 +123,16 @@
     </div>
   </section>
 
-  <section id="prices" class="price-section" >
-		<!-- style="background: url(img/adaptive.png);background-size: cover;"--> 
+  <section id="prices" class="price-section">
+		<!--  style="background: url(img/price-fone.png);background-size: cover;"--> 
+    <div class="price-fone" style="background: url(img/price-fone.png); background-size: cover; background-repeat: no-repeat;"></div>
     <div class="container">
         <div class="row text-header">
 					<h2>Цены</h2>
 				</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item">
+				<div class="price-item wow flipInY" data-wow-delay=0.2s data-wow-offset=200>
 					<div class="price-item__header">
 						Старт
 					</div>
@@ -149,7 +156,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item">
+				<div class="price-item wow flipInY" data-wow-delay=0.4s data-wow-offset=200>
 					<div class="price-item__header">
 						Стандарт
 					</div>
@@ -173,7 +180,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item">
+				<div class="price-item wow flipInY" data-wow-delay=0.6s data-wow-offset=200>
 					<div class="price-item__header">
 						Расширенный
 					</div>
@@ -197,7 +204,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item">
+				<div class="price-item wow flipInY" data-wow-delay=0.8s data-wow-offset=200>
 					<div class="price-item__header">
 						Бизнес
 					</div>
@@ -221,7 +228,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row flex-center" style="margin: 2rem 0 3rem;">
+		<div class="row flex-center wow fadeIn" data-wow-delay=0.3s style="margin: 2rem 0 3rem;">
           <a href="#getSite" class="popup btn"/>Заказать</a>
     </div>
     </div>
@@ -317,7 +324,7 @@
 	</section>
 
 <script src="js/jquery-3.3.1.min.js"></script>
-<script src="magnific-popup/jquery.magnific-popup.js"></script>
+<script src="vendor/magnific-popup/jquery.magnific-popup.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
