--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<link rel="stylesheet" type="text/css" href="vendor/animate.min.css">
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <title>Разработка Landing page</title>
+  <title>Разработка Landing page | WebLaPa</title>
+  <meta name="description" content="Создадим Landing page - от 9 990 р. Без предоплаты. Создадим рекламную компанию. Прототип в подарок."/>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 		<div class="container">
         <div class="row header">
 					<div class="col-12 col-md-3 logo">
-						<div><a href="#"><img src="img/logo1.png" alt="" style="padding: 0;max-width: 100%;"></a></div>
+						<div><a href="#"><img src="img/logo2.png" alt="Разработка лендингов" style="padding: 0;max-width: 100%;"></a></div>
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="menu">
@@ -61,7 +62,7 @@
 						</div>
           </div>
         <div class="row flex-center" style="margin: 4rem 0 3rem;">
-          <a href="#getSite" class="popup btn"/>Заказать</a>
+          <a href="#getSite" class="popup btn">Заказать</a>
         </div>
     </div>
   </section>
@@ -93,11 +94,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 text-space-around wow fadeIn " data-wow-offset=200>
+			<div class="col-md-6 text-space-around wow fadeIn " data-wow-offset=100>
 				<p><strong>Панель управления</strong><br>Вы самостоятельно сможете редактировать контент.</p>
 			</div>
-			<div class="col-md-6 text-center wow fadeIn " data-wow-delay=0.5s data-wow-offset=200>
-				<img src="img/admpanel.png" alt="Адаптивный дизайн">
+			<div class="col-md-6 text-center wow fadeIn " data-wow-delay=0.5s data-wow-offset=100>
+				<img src="img/admpanel.png" alt="Панель управления лендингом">
 			</div>
 		</div>
     </div>
@@ -132,7 +133,7 @@
 				</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item wow flipInY" data-wow-delay=0.2s data-wow-offset=200>
+				<div class="price-item wow flipInY" data-wow-delay=0.2s data-wow-offset=100>
 					<div class="price-item__header">
 						Старт
 					</div>
@@ -156,7 +157,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item wow flipInY" data-wow-delay=0.4s data-wow-offset=200>
+				<div class="price-item wow flipInY" data-wow-delay=0.4s data-wow-offset=100>
 					<div class="price-item__header">
 						Стандарт
 					</div>
@@ -180,7 +181,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item wow flipInY" data-wow-delay=0.6s data-wow-offset=200>
+				<div class="price-item wow flipInY" data-wow-delay=0.6s data-wow-offset=100>
 					<div class="price-item__header">
 						Расширенный
 					</div>
@@ -204,7 +205,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
-				<div class="price-item wow flipInY" data-wow-delay=0.8s data-wow-offset=200>
+				<div class="price-item wow flipInY" data-wow-delay=0.8s data-wow-offset=100>
 					<div class="price-item__header">
 						Бизнес
 					</div>
@@ -228,7 +229,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row flex-center wow fadeIn" data-wow-delay=0.3s style="margin: 2rem 0 3rem;">
+		<div class="row flex-center wow fadeIn" style="margin: 2rem 0 3rem;">
           <a href="#getSite" class="popup btn"/>Заказать</a>
     </div>
     </div>
@@ -311,9 +312,10 @@
 					<textarea name="message" cols="1" rows="3" id="desc" placeholder="" style="width:98%" ></textarea>
 					
 					<p>Нажимая кнопку "Отправить заказ", вы соглашаетесь с <a href="soglasie.html" target="_blank">правилами обработки данных</a></p>
-					<div id="note"></div>
+					
 					<p class="text-center"><button type="submit" id="submit" class="btn">Отправить заказ</button></p>
 			</div>
+			<div id="note"></div>
 	</form>
 
 	<div id="ex1" class="text-center ex-max"><img src="img/ex1.jpg" alt="Пример работ при разработке лендинга."></div>
