--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-3 contacts">
+						<div class="icon">
+							<div class="icon-r"></div>
+						</div>
 						qfenix@yandex.ru
 					</div>
         </div>
