--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="icon">
 							<div class="icon-r"></div>
 						</div>
-						qfenix@yandex.ru
+						info@weblapa.ru
 					</div>
         </div>
 		</div>
