--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<link rel="stylesheet" type="text/css" href="vendor/animate.min.css">
-	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<title>Разработка Landing page</title>
 	<meta name="description" content="Создадим лендинг для вашего бизнеса. От 9 990 р. Без предоплаты!!! Бесплатный прототип. Настройка рекламной компании."/>
 <!-- Yandex.Metrika counter -->
