--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		</div>
 		<div class="row">
 			<div class="text-desc text-center">
-				Выполним все технические работы для запуска лендинга. Подготовим инструкции для самостоятельного администрированию сайта.
+				Выполним все технические работы для запуска лендинга. Подготовим инструкции для самостоятельного администрирования сайта.
 			</div>
 		</div>
     </div>
